--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,6 @@
-*.py[cod]
-
-# C extensions
-*.so
-
-# Packages
-*.egg
 *.egg-info
-dist
+
 build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
+dist
 
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-# MyCharm
-.idea
+.mypy_cache
