--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+install:
+  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then pip install -r requirements.txt; fi
 script:
   - python -m unittest test_asserts
-  - mypy asserts.py test_asserts.py
+  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then mypy asserts.py test_asserts.py; fi
