--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ install:
 script:
   - python -m unittest test_asserts
   - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then mypy asserts test_asserts.py; fi
+  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then python -m doctest asserts/__init__.py; fi
