--- a/mypy.ini
+++ b/mypy.ini
@@ -5,4 +5,5 @@ warn_redundant_casts = True
 warn_return_any = True
 warn_unused_ignores = True
 warn_unused_configs = True
+no_implicit_optional = True
 strict_optional = True
