--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,9 @@
 [mypy]
-ignore_missing_imports = True
 disallow_subclassing_any = True
+disallow_untyped_decorators = True
+check_untyped_defs = True
 warn_redundant_casts = True
 warn_return_any = True
 warn_unused_ignores = True
 warn_unused_configs = True
 no_implicit_optional = True
-strict_optional = True
