--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,30 @@
 language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "3.7"
 install:
   - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then pip install -r requirements.txt; fi
 script:
   - python -m unittest test_asserts
   - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then mypy asserts test_asserts.py; fi
   - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then python -m doctest asserts/__init__.py; fi
+jobs:
+  include:
+    - stage: test
+      python: 2.7
+      dist: trusty
+      sudo: false
+    - stage: test
+      python: 3.4
+      dist: trusty
+      sudo: false
+    - stage: test
+      python: 3.5
+      dist: trusty
+      sudo: false
+    - stage: test
+      python: 3.6
+      dist: trusty
+      sudo: false
+    - stage: test
+      python: 3.7
+      dist: xenial
+      sudo: true
+
