Don't run mypy or doctests on Python 3.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ install:
   - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then pip install -r requirements.txt; fi
 script:
   - python -m unittest test_asserts
-  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then mypy asserts test_asserts.py; fi
-  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then python -m doctest asserts/__init__.py; fi
+  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1,2` \> 3.4; then mypy asserts test_asserts.py; fi
+  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1,2` \> 3.4; then python -m doctest asserts/__init__.py; fi
 jobs:
   include:
     - stage: test
