--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,7 @@
 universal=1
 [metadata]
 license_file=LICENSE
+[flake8]
+# E501: line too long (required in docstrings)
+# W503: line break before binary operator
+ignore = E501,W503
