--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,10 @@
 [mypy]
+check_untyped_defs = True
 disallow_subclassing_any = True
 disallow_untyped_decorators = True
-check_untyped_defs = True
+no_implicit_optional = True
+no_implicit_reexport = True
 warn_redundant_casts = True
 warn_return_any = True
-warn_unused_ignores = True
 warn_unused_configs = True
-no_implicit_optional = True
+warn_unused_ignores = True
