--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 entrypoints==0.3
-flake8==3.7.9
+flake8==3.8.1
 mccabe==0.6.1
 mypy==0.770
-pycodestyle==2.5.0
+pycodestyle==2.6.0
 pyflakes==2.2.0
 typed-ast==1.4.1
+typing-extensions==3.7.4.2
 wheel==0.34.2
