--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,14 @@
 language: python
 dist: bionic
 install:
-  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1`  = 3; then pip install -r requirements.txt; fi
+  - pip install -r requirements.txt
 script:
   - python -m unittest test_asserts
-  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1,2` \> 3.4; then mypy asserts test_asserts.py; fi
-  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1,2` \> 3.4; then flake8 asserts test_asserts.py; fi
-  - if test `python --version 2>&1 | cut -d " " -f 2 | cut -d "." -f 1,2` \> 3.4; then python -m doctest asserts/__init__.py; fi
+  - mypy asserts test_asserts.py
+  - flake8 asserts test_asserts.py
+  - python -m doctest asserts/__init__.py
 jobs:
   include:
-    - stage: test
-      python: 2.7
-      dist: trusty
-    - stage: test
-      python: 3.5
-      dist: trusty
     - stage: test
       python: 3.6
       dist: trusty
