--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -18,19 +18,20 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: "pip"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        cache-dependency-path: "**/poetry.lock"
+    - name: Install poetry
+      run: pip --disable-pip-version-check install -U poetry
+    - name: Install Python packages
+      run: poetry install
     - name: Lint with flake8
       run: |
-        flake8 --version
-        flake8 --show-source --statistics asserts test_asserts.py
+        poetry run flake8 --version
+        poetry run flake8 --show-source --statistics asserts test_asserts.py
     - name: Type checking with mypy
       run: |
-        mypy --version
-        mypy asserts test_asserts.py
+        poetry run mypy --version
+        poetry run mypy asserts test_asserts.py
     - name: Test with unittest
-      run: python -Wall -m unittest test_asserts
+      run: poetry run python -Wall -m unittest test_asserts
     - name: Run doctests
-      run: python -m doctest asserts/__init__.py
+      run: poetry run python -m doctest asserts/__init__.py
