--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ include = ["*/py.typed", "*.pyi"]
 [tool.poetry.dependencies]
 python = ">=3.7"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+black = "^22.10.0"
 flake8 = "~5.0.4"
 mypy = "0.982"
 
