Add additional PyPI URLs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ classifiers = [
 packages = [{ include = "asserts" }]
 include = ["*/py.typed", "*.pyi"]
 
+[tool.poetry.urls]
+"GitHub" = "https://github.com/srittau/python-asserts"
+"Bug Tracker" = "https://github.com/srittau/python-asserts/issues"
+"Changes" = "https://github.com/srittau/python-asserts/blob/main/NEWS.md"
+
 [tool.poetry.dependencies]
 python = ">=3.7"
 
