--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,8 @@ python = ">=3.7"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
-flake8 = "~5.0.4"
-mypy = "0.982"
+flake8 = { version = "^6.0.0", python = ">=3.8.1" }
+mypy = "0.991"
 
 [tool.black]
 line-length = 79
