--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ include = ["*/py.typed", "*.pyi"]
 python = ">=3.7"
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.10.0"
+black = "^23.1.0"
 flake8 = { version = "^6.0.0", python = ">=3.8.1" }
-mypy = "0.991"
+mypy = "~1.0.1"
 
 [tool.black]
 line-length = 79
