--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ include = ["*/py.typed", "*.pyi"]
 python = ">=3.7"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
+black = { version = "^23.1.0", python = ">=3.8" }
 flake8 = { version = "^6.0.0", python = ">=3.8.1" }
 mypy = ">=1.2,<1.5"
 
