--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,16 @@ python = ">=3.8"
 black = { version = "^23.1.0", python = ">=3.8" }
 flake8 = { version = "^6.0.0", python = ">=3.8.1" }
 mypy = "~1.5.1"
+poethepoet = "^0.25.0"
 
 [tool.black]
 line-length = 79
+
+[tool.poe.tasks]
+test = "python3 -Wall -m unittest test_asserts"
+doctest = "python3 -m doctest asserts/__init__.py"
+lint = "flake8 asserts test_asserts.py"
+typecheck = "mypy asserts test_asserts.py"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
