--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,18 +25,18 @@ include = ["*/py.typed", "*.pyi"]
 python = ">=3.8.1"
 
 [tool.poetry.group.dev.dependencies]
-black = { version = "^24.2.0" }
-flake8 = { version = "^7.0.0" }
 mypy = "~1.9.0"
 poethepoet = "^0.25.0"
+ruff = "^0.3.2"
 
-[tool.black]
+[tool.ruff]
 line-length = 79
+target-version = "py38"
 
 [tool.poe.tasks]
 test = "python3 -Wall -m unittest test_asserts"
 doctest = "python3 -m doctest asserts/__init__.py"
-lint = "flake8 asserts test_asserts.py"
+lint = "ruff check asserts test_asserts.py"
 typecheck = "mypy asserts test_asserts.py"
 
 [build-system]
