--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ include = ["*/py.typed", "*.pyi"]
 
 [tool.poetry.dependencies]
 python = ">=3.8.1"
+typing-extensions = "^4.10.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "~1.9.0"
