--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -12,21 +12,21 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: "3.11"
-            - uses: srittau/black@action-pyproject  # default
-            - uses: srittau/black@action-pyproject  # fixed version
+            - uses: srittau/black@dev  # default
+            - uses: srittau/black@dev  # fixed version
               with:
                 version: 2024.2.0
-            - uses: srittau/black@action-pyproject  # pattern
+            - uses: srittau/black@dev  # pattern
               with:
                 use_pyproject: false
                 version: ~=2024.*
-            - uses: srittau/black@action-pyproject  # pyproject
+            - uses: srittau/black@dev  # pyproject
               with:
                 use_pyproject: true
-            - uses: srittau/black@action-pyproject  # pyproject
+            - uses: srittau/black@dev  # pyproject
               with:
                 use_pyproject: on
-            - uses: srittau/black@action-pyproject  # error
+            - uses: srittau/black@dev  # error
               with:
                 use_pyproject: true
                 version: 2024.2.0
@@ -40,6 +40,6 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: "3.10"
-            - uses: srittau/black@action-pyproject
+            - uses: srittau/black@dev
               with:
                 use_pyproject: true
