--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -12,7 +12,7 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: "3.11"
-            - uses: srittau/black@dev  # default
+            # - uses: srittau/black@dev  # default
             - uses: srittau/black@dev  # fixed version
               with:
                 version: 2024.2.0
