--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -15,11 +15,11 @@ jobs:
             # - uses: srittau/black@dev  # default
             - uses: srittau/black@dev  # fixed version
               with:
-                version: 2024.2.0
+                version: 24.2.0
             - uses: srittau/black@dev  # pattern
               with:
                 use_pyproject: false
-                version: ~=2024.*
+                version: ~=24.*
             - uses: srittau/black@dev  # pyproject
               with:
                 use_pyproject: true
@@ -29,7 +29,7 @@ jobs:
             - uses: srittau/black@dev  # error
               with:
                 use_pyproject: true
-                version: 2024.2.0
+                version: 24.2.0
         
     old-python:
         runs-on: ubuntu-latest
@@ -40,6 +40,9 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: "3.10"
-            - uses: srittau/black@dev
+            - uses: srittau/black@dev  # fixed version
+              with:
+                version: 24.2.0
+            - uses: srittau/black@dev  # pyproject
               with:
                 use_pyproject: true
