--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -12,28 +12,33 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: "3.11"
-            # - uses: srittau/black@dev  # default
+            - uses: srittau/black@dev  # default
+              continue-on-error: true
             - uses: srittau/black@dev  # fixed version
+              continue-on-error: true
               with:
                 version: 24.2.0
             - uses: srittau/black@dev  # pattern
+              continue-on-error: true
               with:
                 use_pyproject: false
                 version: ~=24.*
             - uses: srittau/black@dev  # pyproject
+              continue-on-error: true
               with:
                 use_pyproject: true
             - uses: srittau/black@dev  # pyproject
+              continue-on-error: true
               with:
                 use_pyproject: on
             - uses: srittau/black@dev  # error
+              continue-on-error: true
               with:
                 use_pyproject: true
                 version: 24.2.0
         
     old-python:
         runs-on: ubuntu-latest
-        continue-on-error: true
         steps:
             - uses: actions/checkout@v4
             - name: Set up Python
@@ -41,8 +46,10 @@ jobs:
               with:
                 python-version: "3.10"
             - uses: srittau/black@dev  # fixed version
+              continue-on-error: true
               with:
                 version: 24.2.0
             - uses: srittau/black@dev  # pyproject
+              continue-on-error: true
               with:
                 use_pyproject: true
