--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -27,12 +27,12 @@ jobs:
               with:
                 use_pyproject: false
                 version: ~=24.2
-            - name: Use pyproject.toml
+            - name: use_pyproject
               uses: srittau/black@dev
               continue-on-error: true
               with:
                 use_pyproject: true
-            - name: Use both
+            - name: version and use_pyproject
               uses: srittau/black@dev
               continue-on-error: true
               with:
@@ -48,12 +48,12 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: "3.10"
-            - name: Hardcode fixed version
+            - name: "version: 24.2.0"
               uses: srittau/black@dev
               continue-on-error: true
               with:
                 version: 24.2.0
-            - name: Use pyproject.toml
+            - name: use_pyproject
               uses: srittau/black@dev
               continue-on-error: true
               with:
