--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
-[project.optional-dependencies]
-dev = [
+[project]
+dependencies = [
     "other ~= 1.2",
     "black-xxx ~= 99",
     "black ~= 24.2"
