--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,7 @@ dependencies = ["typing-extensions >= 4.10.0, < 5"]
 "Changes" = "https://github.com/srittau/python-asserts/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
-dev = [
-    "mypy >= 1.9, < 1.15",
-    "poethepoet >= 0.27.0, < 0.31",
-    "ruff >= 0.5.1, < 0.15.0",
-]
+dev = ["mypy >= 1.14, < 1.15", "poethepoet", "ruff >= 0.14.0, < 0.15.0"]
 
 [tool.poetry]
 packages = [{ include = "asserts" }]
