--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "asserts"
-version = "0.14.0.dev0"
+version = "0.14.0"
 description = "Stand-alone Assertions"
 readme = "README.md"
 authors = [{ name = "Sebastian Rittau", email = "sebastian.rittau@zfutura.de" }]
